# Actus

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  README_EN.md  SECURITY.md  api.md  api_zhcn.md  config.yaml  docker-compose.yml  pyproject.toml  项目架构.md
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  README.md  alembic.ini  config.yaml.example  pytest.ini  requirements.txt  run.sh
api/alembic/: env.py
api/alembic/versions/: 22abf18600b4_create_file_table.py  3a5b7c9d1e2f_create_user_tables.py  8665808ed431_create_session_table.py  c4fbe9d1a8c1_add_skills_table.py  d5e6f7a8b9c0_add_completed_at_column.py
api/app/: main.py
api/app/interfaces/: repository_dependencies.py  service_dependencies.py
api/core/: config.py  security.py
api/scripts/: create_super_admin.py  migrate_skills_db_to_fs.py  minio_smoke_test.py  minio_upload_file.py  reset_admin_password.py  rollback_skills_fs_to_db.py
api/tests/: conftest.py
api/tests/core/: test_security.py
api/tests/integration/: test_skill_creator_e2e.py
sandbox/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  supervisord.conf
sandbox/app/: main.py
sandbox/app/.devops/: docker-compose.yaml
sandbox/app/core/: config.py  middleware.py
ui/: AGENTS.md  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
(+274 files in other folders)
