[project]
name = "actus"
version = "0.1.0"
description = "开源 AI Agent 平台 — 基于 MCP 工具协议与 A2A 智能体间通信协议"
readme = "README.md"
license = "Apache-2.0"
requires-python = "==3.12.*"
dependencies = [
    "alembic>=1.17.2",
    "async-lru>=2.1.0",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.10",
    "browser-use>=0.11.2",
    "browser-use-sdk>=2.0.12",
    "cos-python-sdk-v5>=1.9.40",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.123.0",
    "filelock>=3.20.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "json-repair>=0.54.3",
    "keyboard>=0.13.5",
    "mcp>=1.25.0",
    "minio>=7.2.20",
    "openai>=2.7.1",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.3",
    "pytest>=9.0.2",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "transformers>=4.57.1",
    "uvicorn[standard]>=0.38.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["api"]
testpaths = ["api/tests"]

[tool.uv.workspace]
members = [
    "sandbox",
]
